# mongoose

./: CMakeLists.txt  README.md
include/mongoose/: bson.hpp  document.hpp  json.hpp  logger.hpp  methods.hpp  model.hpp  mongodb.hpp  mongoose.hpp  repository.hpp  repository_crud.hpp  traits.hpp
include/mongoose/types/: binary.hpp  date.hpp  location_point.hpp  oid.hpp  uuid.hpp
include/mongoose/types/geo/: line_string.hpp  point.hpp  polygon.hpp
src/: logger.cpp  mongodb.cpp  mongoose.cpp
tests/: CMakeLists.txt  test1.cpp  test2.cpp
